Fri Oct 20 18:17:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In quartz: store document lengths in termlists, store total
	  length in a field in the record table, and add methods to access
	  all these.  QuartzDatabase::get_avlength() now implemented.

Fri Oct 20 16:21:41 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The xml warn function now prints to debug rather than stderr

	* Added more indexer tests

Fri Oct 20 15:14:47 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added autoconf/definedir.m4

Fri Oct 20 14:55:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added DATADIR define to find the arch-independent data, with
	  m4 macro AC_DEFINE_DIR.
	
	* Added omindexer.dtd to the distribution.

	* Indexer now finds the DTD by itself to use for verification,
	  either in DATADIR or by the OM_DTD_PATH environment variable.

	* Indexer tests no longer specify the DTD in the XML descriptions.

	* malloc_wrapper.sh sets OM_DTD_PATH.  Should probably be renamed
	  to run_test.sh or something.

Fri Oct 20 13:58:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed checks for document IDs being 0 or termnames being "" in
	  API.  Changed checks in Quartz for these conditions into Asserts.

Fri Oct 20 13:01:26 BST 2000 Olly Betts

	* Added `make ctags' rule.

Fri Oct 20 12:55:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed refcount problem with Quartz - references were being held
	  to the QuartzDatabase member of a QuartzWritableDatabase.
	  Restructured to tidy up and avoid this:  QuartzTermLists now hold
	  a refcount pointer to the appropriate database, and store a
	  pointer to the lexicon table to use directly if required.

Thu Oct 19 16:47:18 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a few indexer tests.

	* Made the START node's output be a wildcard type.

Thu Oct 19 16:03:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
